lcs-web (2.4.7.1~2) Lcs; urgency=low

  [ Jean-Luc Chrétien ]
  * Modify lcs-etch2lenny script
  * Add a set of pics in Annu/images
  * Fix rights on skel user Profile in mkhdir.sh 
  * Add test if lcs-deskto is activate and browser is not ie5 or ie6 in lcs/index.php
  * Update and synchronize with SE3 scripts : Import Sconet
 
  [ Raphaël Hertzog ]
  * Remove /tmp/{applilcs,moduleslcs}.xml before calling wget otherwise wget
    might download into {applilcs,moduleslcs}.xml.1 and we don't see the new
    content. This is required because when a broken XML file is downloaded,
    it's not removed...

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 23 Sep 2010 13:23:37 +0200

lcs-web (2.4.7) Lcs; urgency=low

  * Fix bug  maj modules Auto/Manu (scripts modules_installes.php and boutons_style.css)
  * Fix bug in script select_briques.php 
  * MisterPhi : 
    * Modify process process statistics
    * Add redirect mail 
    * Add link mail to groups
    * Add strong authentification system based on swekey  
  * Add password user init and group listing in appli Annu
  * Add a function acces_btn_admin in function_inc.php
  * Modify rights acces for administration page in barre.php 
  * Add lcs-libjs dependence
  * Modify lcs-web-fixrights
  * Change the package structure for the implementation of menu.d modularization
  * Change upgrade to dist-upgrade in LcsMaj 
  * Modify primary group id to 513 and first uid number to 1001 in LcSe.pm, gep2.cgi and crob_ldap_functions.php 
  * Add pwdPolicy param :
     * test in accueill.php and applis.php
     * Add function pwdMustChange in ldap.inc.php
     * Add must_change_default_pwd.php in Annu 
     * Insert param pwdPolicy in lcs_db.params
  * Add link to configuration open VPN in setup page  

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 01 Jul 2010 13:49:54 +0200

lcs-web (2.4.6.5) Lcs; urgency=low

  * Modify barre.php : Correction broken link urllogo