@@ -6,6 +6,7 @@ lcs-web (2.4.7.1~2) Lcs; urgency=low
   * Fix rights on skel user Profile in mkhdir.sh 
   * Add test if lcs-deskto is activate and browser is not ie5 or ie6 in lcs/index.php
   * Update and synchronize with SE3 scripts : Import Sconet
+  * Add chg_gidNumber.sh in /usr/share/lcs/scripts
  
   [ Raphaël Hertzog ]
   * Remove /tmp/{applilcs,moduleslcs}.xml before calling wget otherwise wget
@@ -13,7 +14,7 @@ lcs-web (2.4.7.1~2) Lcs; urgency=low
     content. This is required because when a broken XML file is downloaded,
     it's not removed...
 
- -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Thu, 23 Sep 2010 13:23:37 +0200
+ -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Wed, 29 Sep 2010 17:43:02 +0200
 
 lcs-web (2.4.7) Lcs; urgency=low
 
